--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       right music, wherever you are.</h2>
     </section>
 
-    <section>
+    <section class="card-section">
       <h3>What’s on Spotify?</h3>
       <div class="card-container">
         <div class="card">
